# python-activerecord-mysql

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PACKAGING.md  README.md  TESTING.md  config.example.json  config.example.toml  explore_mysql.py  explore_mysql_services.py  mysql_introspection_functions.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: README.md  architecture.md  code_style.md  testing.md
.gemini/: backend_development.md  mysql_backend.md  testing.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog-check.yml  publish.yml  test.yml
changelog.d/: 0.added.md  10.added.md  12.added.md  13.feat.md  14.fixed.md  16.added.md  18.added.md  20.added.md  21.added.md  23.added.md  24.added.md  25.added.md  27.added.md  28.fixed.md  29.added.md  3.feat.md  30.added.md  31.added.md  33.added.md  35.added.md  35.changed.md  35.fixed.md  37.security.md  6.added.md  6.fixed.md  8.added.md
docs/: README.md
docs/en_US/: README.md
docs/en_US/ddl/: README.md
docs/en_US/installation_and_configuration/: README.md  backend_group.md  charset.md  configuration.md  installation.md  pool.md  ssl.md
docs/en_US/introduction/: README.md  relationship.md  supported_versions.md
docs/en_US/mysql_specific_features/: README.md  dialect.md  explain.md  field_types.md  indexing.md  introspection.md  storage_engine.md
docs/en_US/scenarios/: README.md  parallel_workers.md
docs/en_US/testing/: README.md  configuration.md  local.md
docs/en_US/transaction_support/: README.md  deadlock.md  isolation_level.md  savepoint.md
docs/en_US/troubleshooting/: connection.md  performance.md
docs/en_US/type_adapters/: README.md  custom.md  mapping.md  timezone.md
docs/examples/chapter_02_connection_pool/: README.md  async_connection_pool.py  connection_pool_stress_test_async.py  connection_pool_stress_test_sync.py
docs/examples/chapter_04_ddl/: ddl.py
docs/examples/chapter_05_worker_isolation/: README.md  config.py  exp1_shared_connection.py
docs/examples/chapter_08_scenarios/parallel_workers/: README.md  config_loader.py  exp1_basic_multiprocess.py  exp2_mysql_async_advantage.py  exp3_deadlock_wrong.py  exp4_partition_correct.py  exp5_multithread_warning.py  exp6_backend_group_context.py  models.py  setup_db.py
docs/examples/chapter_10_fastapi/: README.md  app.py  config_loader.py  database.py
docs/examples/chapter_12_named_procedure/: README.md  diagram_demo.py  order_workflow.py
docs/examples/chapter_12_named_procedure/queries/: order_queries.py
docs/zh_CN/: README.md
docs/zh_CN/ddl/: README.md
docs/zh_CN/installation_and_configuration/: README.md  backend_group.md  charset.md  configuration.md  installation.md  pool.md  ssl.md
docs/zh_CN/introduction/: README.md  relationship.md  supported_versions.md
docs/zh_CN/mysql_specific_features/: README.md  dialect.md  explain.md  field_types.md  indexing.md  introspection.md  storage_engine.md
docs/zh_CN/scenarios/: README.md  parallel_workers.md
docs/zh_CN/testing/: README.md  configuration.md  local.md
docs/zh_CN/transaction_support/: README.md  deadlock.md  isolation_level.md  savepoint.md
docs/zh_CN/troubleshooting/: README.md  connection.md  performance.md
docs/zh_CN/type_adapters/: README.md  custom.md  mapping.md  timezone.md
scripts/: build_hooks.py
src/rhosocial/: __init__.py
src/rhosocial/activerecord/: __init__.py
src/rhosocial/activerecord/backend/: __init__.py
src/rhosocial/activerecord/backend/impl/: __init__.py
tests/: config_manager.py  conftest.py  test_config_manager.py  test_namespace_behavior.py
tests/providers/: basic.py  basic_connection.py  events.py  mixins.py  query.py  query_connection.py  registry.py  scenarios.py
tests/rhosocial/activerecord/backend/mysql/: config.yml  test_curd.py  test_explain.py  test_expression.py  test_returning.py  test_transaction.py
tests/rhosocial/activerecord/backend/mysql80/: README.md  config.yml  conftest.py  test_converter.py  test_curd.py  test_expression.py  test_returning.py  test_transaction.py  test_window_functions.py
tests/rhosocial/activerecord/query/mysql/: test_aggregate_window.py  test_explain_aggregate.py  test_explain_basic.py  test_explain_conditions.py  test_explain_grouped_aggregate.py  test_explain_joins.py  test_explain_simple_aggregate.py  test_explain_specific.py  test_mysql_aggregate_window.py  test_mysql_complex_expressions.py  test_mysql_explain_aggregate.py  test_mysql_explain_basic.py  test_mysql_explain_conditions.py  test_mysql_explain_joins.py  test_mysql_explain_window.py  test_mysql_json_expressions.py
tests/rhosocial/activerecord_mysql_test/: test_base.py
tests/rhosocial/activerecord_mysql_test/backend/mysql80/: __init__.py  test_returning.py  test_transaction.py
tests/rhosocial/activerecord_mysql_test/basic/: conftest.py  test_curd.py
tests/rhosocial/activerecord_mysql_test/basic/fixtures/: models.py
tests/rhosocial/activerecord_mysql_test/feature/backend/: conftest.py  test_async_column_mapping_backend.py  test_async_concurrency.py  test_async_crud_backend.py  test_async_error_handling.py  test_async_expression_backend.py  test_async_server_version_backend.py  test_async_transaction_backend.py  test_async_transaction_isolation_effect.py  test_async_type_converters_backend.py  test_async_type_mapping_backend.py  test_backend_explain.py  test_cli.py  test_column_mapping_backend.py  test_concurrency_protocol.py  test_connection_resilience.py  test_create_table_like.py  test_crud_backend.py  test_dialect.py  test_dialect_function_support.py  test_enum_adapter.py  test_enum_adapter_backend.py  test_expression_backend.py  test_fulltext_index.py  test_json_expressions.py  test_json_functions.py  test_json_functions_backend.py  test_mysql_bitwise_functions.py  test_mysql_ddl_features.py  test_mysql_dialect_security.py  test_mysql_math_enhanced_functions.py  test_mysql_protocol_conformance.py  test_niladic_functions.py  test_server_version_backend.py  test_set_type.py  (+11 more)
tests/scripts/: inspect_databases.py
(+321 files in other folders)
