[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhosocial_activerecord_mysql"
# Version is read from src/rhosocial/activerecord/backend/impl/mysql/__init__.py
dynamic = ["version"]
description = "MySQL backend implementation for rhosocial-activerecord, providing a robust and optimized MySQL database support."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "vistart", email = "i@vistart.me" }
]
keywords = ["activerecord", "orm", "database", "mysql", "pymysql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rhosocial-activerecord>=0.9.0,<2.0.0",
    "mysql-connector-python>=9.2.0"
]

[project.optional-dependencies]
# Additional features
pooling = [
    "DBUtils>=3.0.0",
]
# Development dependencies
test = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rhosocial/python-activerecord-mysql"
Documentation = "https://docs.python-activerecord.dev.rho.social"
Repository = "https://github.com/rhosocial/python-activerecord-mysql.git"
Issues = "https://github.com/rhosocial/python-activerecord-mysql/issues"

[tool.hatch.version]
path = "src/rhosocial/activerecord/backend/impl/mysql/__init__.py"
pattern = '^__version__\s*=\s*"(?P<version>(?:[1-9]\d*!)?\d+(?:\.\d+)*(?:[-._]?(?:a|alpha|b|beta|rc|pre|preview)(?:[-._]?\d+)?)?(?:\.post(?:0|[1-9]\d*))?(?:\.dev(?:0|[1-9]\d*))?(?:\+[a-z0-9]+(?:[._-][a-z0-9]+)*)?)"$'

[tool.hatch.build]
include = [
  "src/rhosocial/activerecord/backend/impl/mysql/**/*.py",
  "src/rhosocial/activerecord/backend/impl/mysql/**/*.pyi",
  "LICENSE",
  "README.md",
]
exclude = [
  "tests/**",
  "docs/**",
  "examples/**",
  "*.pyc",
  "**/__pycache__",
  "**/*.py[cod]",
  "**/*.so",
  "**/.DS_Store",
  "**/.*.swp",
  ".git*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rhosocial"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["rhosocial"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true